// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeChartScene — 스냅샷 (좌표 회귀 감시) > area / vertical / stacked 1`] = `
{
  "axes": [
    {
      "axis": "x",
      "grid": [],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 32.9,
        "x2": 308,
        "y1": 210.4,
        "y2": 210.4,
      },
      "ticks": [
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Mon",
          "x": 78.75,
          "y": 214.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Tue",
          "x": 170.45,
          "y": 214.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Wed",
          "x": 262.15,
          "y": 214.8,
        },
      ],
    },
    {
      "axis": "y",
      "grid": [],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 32.9,
        "x2": 32.9,
        "y1": 12,
        "y2": 210.4,
      },
      "ticks": [
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "0",
          "x": 28.5,
          "y": 210.4,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "10",
          "x": 28.5,
          "y": 170.72,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "20",
          "x": 28.5,
          "y": 131.04,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "30",
          "x": 28.5,
          "y": 91.36,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "40",
          "x": 28.5,
          "y": 51.68,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "50",
          "x": 28.5,
          "y": 12,
        },
      ],
    },
  ],
  "empty": false,
  "legend": null,
  "marks": [
    {
      "bbox": {
        "h": 119.04,
        "w": 183.4,
        "x": 78.75,
        "y": 91.36,
      },
      "d": "M 78.75 162.78 L 170.45 91.36 L 262.15 138.98 L 262.15 210.4 L 170.45 210.4 L 78.75 210.4 Z",
      "fillSeries": 0,
      "kind": "path",
      "strokeSeries": 0,
      "strokeWidth": 2,
    },
    {
      "bbox": {
        "h": 123,
        "w": 183.4,
        "x": 78.75,
        "y": 39.78,
      },
      "d": "M 78.75 83.42 L 170.45 59.62 L 262.15 39.78 L 262.15 138.98 L 170.45 91.36 L 78.75 162.78 Z",
      "fillSeries": 1,
      "kind": "path",
      "strokeSeries": 1,
      "strokeWidth": 2,
    },
  ],
  "plot": {
    "h": 198.4,
    "w": 275.1,
    "x": 32.9,
    "y": 12,
  },
  "size": {
    "height": 240,
    "width": 320,
  },
}
`;

exports[`computeChartScene — 스냅샷 (좌표 회귀 감시) > bar / vertical / dodged 1`] = `
{
  "axes": [
    {
      "axis": "x",
      "grid": [],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 32.9,
        "x2": 308,
        "y1": 210.4,
        "y2": 210.4,
      },
      "ticks": [
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Mon",
          "x": 78.75,
          "y": 214.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Tue",
          "x": 170.45,
          "y": 214.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "Wed",
          "x": 262.15,
          "y": 214.8,
        },
      ],
    },
    {
      "axis": "y",
      "grid": [],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 32.9,
        "x2": 32.9,
        "y1": 12,
        "y2": 210.4,
      },
      "ticks": [
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "0",
          "x": 28.5,
          "y": 210.4,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "5",
          "x": 28.5,
          "y": 177.33,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "10",
          "x": 28.5,
          "y": 144.27,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "15",
          "x": 28.5,
          "y": 111.2,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "20",
          "x": 28.5,
          "y": 78.13,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "25",
          "x": 28.5,
          "y": 45.07,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "30",
          "x": 28.5,
          "y": 12,
        },
      ],
    },
  ],
  "empty": false,
  "legend": null,
  "marks": [
    {
      "h": 79.36,
      "kind": "rect",
      "seriesIndex": 0,
      "w": 73.36,
      "x": 42.07,
      "y": 131.04,
    },
    {
      "h": 198.4,
      "kind": "rect",
      "seriesIndex": 0,
      "w": 73.36,
      "x": 133.77,
      "y": 12,
    },
    {
      "h": 119.04,
      "kind": "rect",
      "seriesIndex": 0,
      "w": 73.36,
      "x": 225.47,
      "y": 91.36,
    },
  ],
  "plot": {
    "h": 198.4,
    "w": 275.1,
    "x": 32.9,
    "y": 12,
  },
  "size": {
    "height": 240,
    "width": 320,
  },
}
`;

exports[`computeChartScene — 스냅샷 (좌표 회귀 감시) > line / horizontal / grid+legend 1`] = `
{
  "axes": [
    {
      "axis": "y",
      "grid": [],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 38.95,
        "x2": 38.95,
        "y1": 12,
        "y2": 187.4,
      },
      "ticks": [
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "Mon",
          "x": 34.55,
          "y": 41.23,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "Tue",
          "x": 34.55,
          "y": 99.7,
        },
        {
          "anchor": "end",
          "baseline": "middle",
          "kind": "text",
          "role": "tick",
          "text": "Wed",
          "x": 34.55,
          "y": 158.17,
        },
      ],
    },
    {
      "axis": "x",
      "grid": [
        {
          "kind": "line",
          "role": "grid",
          "x1": 38.95,
          "x2": 38.95,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 83.79,
          "x2": 83.79,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 128.63,
          "x2": 128.63,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 173.48,
          "x2": 173.48,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 218.32,
          "x2": 218.32,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 263.16,
          "x2": 263.16,
          "y1": 12,
          "y2": 187.4,
        },
        {
          "kind": "line",
          "role": "grid",
          "x1": 308,
          "x2": 308,
          "y1": 12,
          "y2": 187.4,
        },
      ],
      "line": {
        "kind": "line",
        "role": "axis",
        "x1": 38.95,
        "x2": 308,
        "y1": 187.4,
        "y2": 187.4,
      },
      "ticks": [
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "0",
          "x": 38.95,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "5",
          "x": 83.79,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "10",
          "x": 128.63,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "15",
          "x": 173.48,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "20",
          "x": 218.32,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "25",
          "x": 263.16,
          "y": 191.8,
        },
        {
          "anchor": "middle",
          "baseline": "top",
          "kind": "text",
          "role": "tick",
          "text": "30",
          "x": 308,
          "y": 191.8,
        },
      ],
    },
  ],
  "empty": false,
  "legend": {
    "items": [
      {
        "label": "A",
        "seriesIndex": 0,
        "swatch": {
          "h": 10,
          "kind": "rect",
          "seriesIndex": 0,
          "w": 10,
          "x": 12,
          "y": 205.5,
        },
        "text": {
          "anchor": "start",
          "baseline": "middle",
          "kind": "text",
          "role": "legend",
          "text": "A",
          "x": 28,
          "y": 210.5,
        },
      },
      {
        "label": "B",
        "seriesIndex": 1,
        "swatch": {
          "h": 10,
          "kind": "rect",
          "seriesIndex": 1,
          "w": 10,
          "x": 48.05,
          "y": 205.5,
        },
        "text": {
          "anchor": "start",
          "baseline": "middle",
          "kind": "text",
          "role": "legend",
          "text": "B",
          "x": 64.05,
          "y": 210.5,
        },
      },
    ],
    "position": "bottom",
  },
  "marks": [
    {
      "bbox": {
        "h": 116.94,
        "w": 161.43,
        "x": 146.57,
        "y": 41.23,
      },
      "d": "M 146.57 41.23 L 308 99.7 L 200.38 158.17",
      "kind": "path",
      "strokeSeries": 0,
      "strokeWidth": 2,
    },
    {
      "bbox": {
        "h": 116.94,
        "w": 152.46,
        "x": 110.7,
        "y": 41.23,
      },
      "d": "M 218.32 41.23 L 110.7 99.7 L 263.16 158.17",
      "kind": "path",
      "strokeSeries": 1,
      "strokeWidth": 2,
    },
  ],
  "plot": {
    "h": 175.4,
    "w": 269.05,
    "x": 38.95,
    "y": 12,
  },
  "size": {
    "height": 240,
    "width": 320,
  },
}
`;

exports[`computeChartScene — 스냅샷 (좌표 회귀 감시) > pie / legend right 1`] = `
{
  "axes": [],
  "empty": false,
  "legend": {
    "items": [
      {
        "label": "Mon",
        "seriesIndex": 0,
        "swatch": {
          "h": 10,
          "kind": "rect",
          "seriesIndex": 0,
          "w": 10,
          "x": 259.85,
          "y": 12.5,
        },
        "text": {
          "anchor": "start",
          "baseline": "middle",
          "kind": "text",
          "role": "legend",
          "text": "Mon",
          "x": 275.85,
          "y": 17.5,
        },
      },
      {
        "label": "Tue",
        "seriesIndex": 1,
        "swatch": {
          "h": 10,
          "kind": "rect",
          "seriesIndex": 1,
          "w": 10,
          "x": 259.85,
          "y": 29.5,
        },
        "text": {
          "anchor": "start",
          "baseline": "middle",
          "kind": "text",
          "role": "legend",
          "text": "Tue",
          "x": 275.85,
          "y": 34.5,
        },
      },
      {
        "label": "Wed",
        "seriesIndex": 2,
        "swatch": {
          "h": 10,
          "kind": "rect",
          "seriesIndex": 2,
          "w": 10,
          "x": 259.85,
          "y": 46.5,
        },
        "text": {
          "anchor": "start",
          "baseline": "middle",
          "kind": "text",
          "role": "legend",
          "text": "Wed",
          "x": 275.85,
          "y": 51.5,
        },
      },
    ],
    "position": "right",
  },
  "marks": [
    {
      "bbox": {
        "h": 216,
        "w": 216,
        "x": 27.93,
        "y": 12,
      },
      "d": "M 135.93 120 L 135.93 12 A 108 108 0 0 1 238.64 86.63 Z",
      "fillSeries": 0,
      "kind": "path",
    },
    {
      "bbox": {
        "h": 216,
        "w": 216,
        "x": 27.93,
        "y": 12,
      },
      "d": "M 135.93 120 L 238.64 86.63 A 108 108 0 0 1 33.21 153.37 Z",
      "fillSeries": 1,
      "kind": "path",
    },
    {
      "bbox": {
        "h": 216,
        "w": 216,
        "x": 27.93,
        "y": 12,
      },
      "d": "M 135.93 120 L 33.21 153.37 A 108 108 0 0 1 135.92 12 Z",
      "fillSeries": 2,
      "kind": "path",
    },
  ],
  "plot": {
    "h": 216,
    "w": 247.85,
    "x": 12,
    "y": 12,
  },
  "size": {
    "height": 240,
    "width": 320,
  },
}
`;
